2005-05-04 Vladimir Hirsl
	Fix for PR 92599: [Indexer] Remove annotation markers preference from DOMIndexer & friends
	Replaced indexer problem markers property page block for DOMIndexer.
	(from SourceIndexerBlock to NullIndexerBlock).
	Only inclusion not found preprocessor problem markers are going to be
	generated (there isn't an option in UI to disable/enable them yet).

	* plugin.xml
	
2005-04-22 Vladimir Hirsl
	Added per file C/C++ Includes & Symbols property page to display
	per file scanner info (discovered and user specified).
	
	+ icons/obj16/hfolder_quote_obj.gif
	* src/org/eclipse/cdt/internal/ui/CPluginImages.java
	* src/org/eclipse/cdt/internal/ui/dialogs/cpaths/AbstractPathOptionBlock.java
	* src/org/eclipse/cdt/internal/ui/dialogs/cpaths/CPathEntryMessages.properties
	+ src/org/eclipse/cdt/internal/ui/dialogs/cpaths/CPathIncludeSymbolEntryBasePage.java
	* src/org/eclipse/cdt/internal/ui/dialogs/cpaths/CPathIncludeSymbolEntryPage.java
	+ src/org/eclipse/cdt/internal/ui/dialogs/cpaths/CPathIncludeSymbolEntryPerFilePage.java
	* src/org/eclipse/cdt/internal/ui/dialogs/cpaths/CPElement.java
	* src/org/eclipse/cdt/internal/ui/dialogs/cpaths/CElementLabelProvider.java
	* src/org/eclipse/cdt/internal/ui/dialogs/cpaths/NewIncludesSymbolsTabBlock.java

2005-04-13 Alain Magloire
	Fix PR 91239
	* src/org/eclipse/cdt/internal/ui/CPerspectiveFactory.java

2005-04-12 Alain Magloire
	Fix for PR 91163, 91165 and 91169
	* src/org/eclipse/cdt/internal/ui/compare/CMergeViewer.java
	* src/org/eclipse/cdt/internal/ui/editor/CEditor.java
	* src/org/eclipse/cdt/internal/ui/editor/CEditor.properties
	* src/org/eclipse/cdt/internal/ui/editor/asm/AsmTextEditor.java
	* src/org/eclipse/cdt/internal/ui/preferences/AbstractPreferencePage.java
	* src/org/eclipse/cdt/internal/ui/preferences/CEditorPreferencePage.java
	* src/org/eclipse/cdt/internal/ui/preferences/CodeAssistPreferencePage.java
	* src/org/eclipse/cdt/internal/ui/preferences/CSourcePreviewerUpdater.java